--- a/css/styles.less
+++ b/css/styles.less
@@ -120,6 +120,7 @@ a {
 
 /***** Columns *********/
 .column-container {
+	padding-top:@standardPadding;
 	overflow:hidden;	
 }
 
@@ -247,6 +248,18 @@ body {
 .impact {
 	padding:@standardPadding;	
 	border-bottom:1px solid @lightGray;	
+}
+
+.impact .col1of3 {
+	padding:0 4%;
+	
+	img {
+		width:50%;	
+	}
+}
+
+.impact .pix-stat-number-big {
+	line-height:0.8em;	
 }
 
 .week {
