--- a/css/styles.less
+++ b/css/styles.less
@@ -485,8 +485,8 @@ hr {
 	background-color: @lightGray;
 }
 
-#tracking-toggle {
-	.pix-link;
+.settings-desc {
+	padding-bottom:@standardPadding;
 }
 
 #auto-track-toggle {
