add better axes

--- a/css/styles.less
+++ b/css/styles.less
@@ -665,10 +665,12 @@ hr {
 	stroke: @lightGray;
 	stroke-width: 1;
 }
-
-.d3Chart .months path, .d3Chart .months .tick line{
+/*
+.d3Chart .months path, .d3Chart .weeks .tick text, .d3Chart .months .tick line{
 	display: none;
 }
+*/
+
 
 .d3Chart .axis .tick line{
 	stroke: @lightGray;
