--- a/css/styles.less
+++ b/css/styles.less
@@ -422,7 +422,7 @@ hr {
 }
 
 .team-leaderboard .person {
-	padding-left:9.5%;	
+	padding-left:15.5%;	
 	padding-top:@standardPadding;
 	padding-bottom:0;
 }
@@ -482,6 +482,10 @@ hr {
 	p {
 		margin-top:-2px;	
 	}
+	
+	p.pix-stat-label-small {
+	margin-top:2px;
+}
 }
 
 .leader .miles p {
