--- a/css/styles.less
+++ b/css/styles.less
@@ -402,7 +402,7 @@ hr {
 	p {
 		float:left;	
 		padding-right:@standardPadding;
-		padding-top:@standardPadding;
+		padding-top:1%;
 	}
 
 	a {
@@ -411,6 +411,7 @@ hr {
 		width:12%;
 		margin:0;
 		padding:0;
+		margin-right: 7px;
 	}
 	
 	img {
