--- a/css/styles.less
+++ b/css/styles.less
@@ -53,7 +53,7 @@ img {max-width:100%}
 	font-size: 1.8em;
 	color: @darkGray;
 	text-align: center;
-	font-weight: 300;
+	font-weight: 200;
 }
 
 .impact .pix-stat-number-big{
@@ -563,10 +563,28 @@ hr {
 		margin: auto;
 		/*margin-top: 10px;*/
 	}
+	
+	p {
+		font-size: .75em;
+		color: @darkGray;
+		font-weight: 300;	
+	}
 }
 
 .settings-section.first {
 	border-top:1px solid @lightGray;
+}
+
+#auto-track-toggle {
+	overflow:hidden;
+	
+	h2 {
+		float:left;	
+	}
+	
+	#track-check {
+		float:right;	
+	}
 }
 
 .settings-section.blank{
