add highlight bar to graph

--- a/css/styles.less
+++ b/css/styles.less
@@ -775,6 +775,16 @@ hr {
 	display: none;
 }
 */
+.d3Chart rect {
+	fill: @lightGray;
+	z-index: -5;
+
+}
+.d3Chart .label-line {
+	fill: none;
+	stroke: @lightGray;
+	shape-rendering: crispEdges;
+}
 
 
 .d3Chart .axis .tick line{
