styling row house

--- a/css/styles.less
+++ b/css/styles.less
@@ -306,7 +306,7 @@ body {
 .col-com-day {
 	width:10%;	
 	float:left;
-	margin-right:15%;
+	margin-right:11%;
 	
 	.pix-stat-number-big {
 		margin-top:-6px;		
@@ -321,9 +321,13 @@ body {
 }
 
 .col-com-tran {
-	width:30%;
+	width:32%;
 	float:left;
 	margin-right:5%;
+	
+	.img-row {
+		overflow:hidden;	
+	}
 	
 	img {
 		float:left;
@@ -333,6 +337,14 @@ body {
 	
 	p {
 		float:left;	
+		margin-top:3px;
+	}
+	
+	.pix-stat-label-small {
+		text-align:left;
+		font-size:0.75em;
+		margin-left:3px;	
+		margin-top:0;
 	}
 }
 
@@ -426,6 +438,14 @@ hr {
 	padding-left:15.5%;	
 	padding-top:@standardPadding;
 	/*padding-bottom:0;*/
+}
+
+.team-members-section .person {
+	padding-bottom:0;	
+
+	.pix-stat-title-big {
+		margin-top:3px;	
+	}
 }
 
 .leaderboard {
