add better graph indicator

--- a/css/styles.less
+++ b/css/styles.less
@@ -797,14 +797,13 @@ hr {
 */
 .d3Chart rect {
 	fill: @lightGray;
-	z-index: -5;
-
 }
-.d3Chart .label-line {
-	fill: none;
+.d3Chart .graph-line-marker {
+	fill: @lightGray;;
 	stroke: @lightGray;
 	shape-rendering: crispEdges;
 }
+
 
 
 .d3Chart .axis .tick line{
