add more trips, and reduce goal, add co2 info

--- a/css/styles.less
+++ b/css/styles.less
@@ -95,6 +95,12 @@ img {max-width:100%}
 	text-align:right;	
 }
 
+.carbon-note {
+	.pix-stat-label-small;
+	padding-top: @standardPadding;
+	text-align: left;
+}
+
 .pix-graphLabel{
 	.pix-small; 
 	fill: @darkGray;
