make the dashboard pay period sticky

--- a/css/styles.less
+++ b/css/styles.less
@@ -228,8 +228,18 @@ body {
 	}
 }
 
+.ppbanner.dashboard {
+	position: fixed;
+	margin-top: @header-height;
+	width: 100%;
+}
+
 .container {
 	margin-top: @header-height;
+}
+
+.container.dashboard {
+	margin-top: 87px;
 }
 
 .pages, .page {
